[gd_scene load_steps=15 format=2]

[ext_resource path="res://titlescreen.gd" type="Script" id=1]
[ext_resource path="res://start.png" type="Texture" id=2]
[ext_resource path="res://8bit16.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://grass.png" type="Texture" id=4]
[ext_resource path="res://Start-Game_hover.png" type="Texture" id=5]
[ext_resource path="res://Start-Game.png" type="Texture" id=6]
[ext_resource path="res://down.png" type="Texture" id=7]
[ext_resource path="res://up.png" type="Texture" id=8]
[ext_resource path="res://counter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cloud.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
loop = true

[sub_resource type="Animation" id=3]
resource_name = "grass"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 3, 1, 2 ]
}

[sub_resource type="DynamicFont" id=4]
size = 77
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Control"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2016.0
margin_bottom = 2016.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="StartGame" type="Label" parent="."]
visible = false
margin_left = 583.912
margin_top = 1563.42
margin_right = 1483.92
margin_bottom = 1638.42
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 1004.59, 1854.56 )
rotation = -3.14159
scale = Vector2( 211.207, -18.3199 )
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_speed = 1.5
"anims/New Anim" = SubResource( 2 )
anims/grass = SubResource( 3 )

[node name="StartGameSprite" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 1792.0
margin_right = 1528.0
margin_bottom = 1920.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 576.0
margin_top = 928.0
margin_right = 1504.0
margin_bottom = 977.002
custom_fonts/font = SubResource( 4 )
text = "Number of Sticks"
align = 1

[node name="number_sticks" type="Label" parent="Label"]
margin_left = 473.0
margin_top = 155.0
margin_right = 1209.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 4 )
text = "1
"

[node name="number_down" type="TextureButton" parent="Label/number_sticks"]
margin_left = -89.0
margin_top = 37.0
margin_right = -49.0
margin_bottom = 77.0
mouse_filter = 1
texture_normal = ExtResource( 7 )
expand = true

[node name="number_up" type="TextureButton" parent="Label/number_sticks"]
margin_left = -89.0
margin_top = -27.0
margin_right = -49.0
margin_bottom = 13.0
texture_normal = ExtResource( 8 )
expand = true

[node name="Vel" type="Control" parent="."]
editor/display_folded = true
margin_left = -384.0
margin_top = 480.0
margin_right = -344.0
margin_bottom = 520.0
__meta__ = {
"_edit_group_": true
}

[node name="Label3" type="Label" parent="Vel"]
margin_left = 953.352
margin_top = 998.17
margin_right = 1881.35
margin_bottom = 1047.17
custom_fonts/font = SubResource( 4 )
text = "Velocities"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Node2D4" parent="Vel" instance=ExtResource( 9 )]
margin_left = 768.0
margin_right = 768.0

[node name="Node2D3" parent="Vel" instance=ExtResource( 9 )]
margin_left = 512.0
margin_right = 512.0

[node name="Node2D2" parent="Vel" instance=ExtResource( 9 )]
margin_left = 256.0
margin_right = 256.0

[node name="Node2D1" parent="Vel" instance=ExtResource( 9 )]

[node name="Siz" type="Control" parent="."]
margin_left = -384.0
margin_top = 224.0
margin_right = -344.0
margin_bottom = 264.0
__meta__ = {
"_edit_group_": true
}

[node name="Label3" type="Label" parent="Siz"]
margin_left = 953.352
margin_top = 998.17
margin_right = 1881.35
margin_bottom = 1047.17
custom_fonts/font = SubResource( 4 )
text = "Sizes"
align = 1

[node name="Node2D4" parent="Siz" instance=ExtResource( 9 )]
margin_left = 768.0
margin_right = 768.0

[node name="Node2D3" parent="Siz" instance=ExtResource( 9 )]
margin_left = 512.0
margin_right = 512.0

[node name="Node2D2" parent="Siz" instance=ExtResource( 9 )]
margin_left = 256.0
margin_right = 256.0

[node name="Node2D1" parent="Siz" instance=ExtResource( 9 )]

[node name="Cloud" type="KinematicBody2D" parent="."]
editor/display_folded = true
visible = false

[node name="Sprite" type="Sprite" parent="Cloud"]
position = Vector2( 3136, 704 )
scale = Vector2( 16.5625, 16.0826 )
texture = ExtResource( 10 )
[connection signal="pressed" from="StartGameSprite" to="." method="_on_StartGameSprite_pressed"]
[connection signal="pressed" from="Label/number_sticks/number_down" to="." method="_on_number_down_pressed"]
[connection signal="pressed" from="Label/number_sticks/number_up" to="." method="_on_number_up_pressed"]
